[gd_scene load_steps=5 format=3 uid="uid://dj7hm283tpnp4"]

[ext_resource type="Script" uid="uid://dkjp22b53wd4d" path="res://Scripts/MainMenu.gd" id="1_tfrft"]
[ext_resource type="Texture2D" uid="uid://c5f1jkte7pler" path="res://Assets/space.jpg" id="2_uv623"]
[ext_resource type="Script" uid="uid://dc2npjk21h7g6" path="res://Scenes/Menus/background.gd" id="3_mc63j"]
[ext_resource type="AudioStream" uid="uid://b8j5dnfw1er4t" path="res://Audio/Menu/BulletHellMainMenuDemo.ogg" id="4_q15nq"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_tfrft")

[node name="Space" type="Sprite2D" parent="."]
position = Vector2(158, 156)
scale = Vector2(0.528008, 0.42576)
texture = ExtResource("2_uv623")
script = ExtResource("3_mc63j")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="Play" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Play"

[node name="Options" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Options"

[node name="Quit" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Exit"

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_q15nq")

[connection signal="pressed" from="VBoxContainer/Play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="VBoxContainer/Options" to="." method="_on_options_pressed"]
[connection signal="pressed" from="VBoxContainer/Quit" to="." method="_on_quit_pressed"]
